[package]
name = "raptor"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.66"
rand = "0.8.5"
raptorq = "1.8.0"
serde = "1.0.193"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2"
